# fsm-generator

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml  typecheck.yml
examples/: mod3.py  mod5.py
src/fsm/: __init__.py  core.py  exceptions.py  logger.py
tests/: test_core.py  test_mod3.py  test_mod5.py
